# pygmalion_replicate_serverless

./: .env.example  .gitignore  README.md  cog.yaml  main.py  pyproject.toml  sample_prompt.sh
